# RW_UL

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  VcpkgPackageList.txt  downloadZfkjDevelopment.bat  installPackage.bat  installPackage.sh  vcpkg.json
Project/: CMakeLists.txt
Project/AutomaticAnnotation/: CMakeLists.txt
Project/AutomaticAnnotation/include/: AutomaticAnnotation.h  AutomaticAnnotationThread.h
Project/AutomaticAnnotation/src/: AutomaticAnnotation.cpp  AutomaticAnnotationThread.cpp
Project/AutomaticAnnotation/ui/: AutomaticAnnotation.ui
Project/ButtonScanner/: CMakeLists.txt
Project/ButtonScanner/cdm/: CMakeLists.txt
Project/ButtonScanner/cdm/include/: cdm_AiModelConfig.h  cdm_AiModelConfigIndex.h  cdm_ButtonScannerDlgExposureTimeSet.h  cdm_ButtonScannerDlgHideScoreSet.h  cdm_ButtonScannerDlgProductSet.h  cdm_ButtonScannerDlgWarningManager.h  cdm_ButtonScannerMainWindow.h  cdm_ButtonScannerProduceLineSet.h
Project/ButtonScanner/cdm/osoFile/: ButtonScannerDlgExposureTimeSet.oso  ButtonScannerDlgHideScoreSet.oso  ButtonScannerDlgProductSet.oso  ButtonScannerDlgWarningManager.oso  ButtonScannerMainWindow.oso  ButtonScannerProduceLineSet.oso  WarningIOSet.oso  WarningIOSetConfig.oso
Project/ButtonScanner/cdm/osoInclude/: ButtonScannerDlgExposureTimeSet.hpp  ButtonScannerDlgHideScoreSet.hpp  ButtonScannerDlgProductSet.hpp  WarningIOSetConfig.hpp  (+3 more)
Project/ButtonScanner/source/: CMakeLists.txt
Project/ModelConverter/: CMakeLists.txt
Project/ModelConverter/include/: Converter.hpp  ModelConverter.h
Project/ModelConverter/src/: Converter.cpp  ModelConverter.cpp  main.cpp
Project/ModelConverter/ui/: ModelConverter.ui
Project/SmartCroppingOfBags/: CMakeLists.txt
Project/SmartCroppingOfBags/osoFile/: GeneralConfig.oso  ScoreConfig.oso  SetConfig.oso
Project/SmartCroppingOfBags/osoInclude/: GeneralConfig.hpp  ScoreConfig.hpp  SetConfig.hpp
Project/SmartCroppingOfBags/souceFile/: Version.txt
Project/SmartCroppingOfBags/source/: CMakeLists.txt
Project/SmartCroppingOfBags/src/: main.cpp
Project/SmartCroppingOfBags/ui/: DlgProductScore.ui  DlgProductSet.ui  SmartCroppingOfBags.ui
Project/ZipperScanner/: CMakeLists.txt
Project/ZipperScanner/include/: DlgProductScore.h  DlgProductSet.h
Project/ZipperScanner/osoFile/: GeneralConfig.oso  ScoreConfig.oso  SetConfig.oso  ZipperScannerDlgExposureTimeSet.oso
Project/ZipperScanner/osoInclude/: GeneralConfig.hpp  ScoreConfig.hpp  SetConfig.hpp  ZipperScannerDlgExposureTimeSet.hpp
Project/ZipperScanner/qrc/: ZipperScanner.qrc
Project/ZipperScanner/src/: main.cpp
Project/ZipperScanner/ui/: DlgExposureTimeSet.ui  DlgIOTrigger.ui  DlgProductScore.ui  DlgProductSet.ui  ZipperScanner.ui
Project/yolo/: CMakeLists.txt  main.cpp
Project/yolo/src/: YOLOv11 - 副本.cpp  YOLOv11.cpp  YOLOv11.h
RW_UL/: CMakeLists.txt  README.md
RW_UL/Module/: CMakeLists.txt  README.md
RW_UL/Module/ActCry/: CMakeLists.txt  README.md
RW_UL/Module/ImgPro/: CMakeLists.txt  README.md
RW_UL/cla/: CMakeLists.txt
RW_UL/cla/include/: cla_utility.hpp
RW_UL/cla/src/: cla_utility.cpp
RW_UL/cla/test/: CMakeLists.txt
RW_UL/dsl/: CMakeLists.txt
RW_UL/dsl/include/: dsl_core.hpp
RW_UL/dsl/src/: dsl_core.cpp
RW_UL/fundation/: CMakeLists.txt  README.md
RW_UL/fundation/cla/: CMakeLists.txt  README.md
RW_UL/fundation/dsl/: CMakeLists.txt
RW_UL/fundation/hoe/: CMakeLists.txt
RW_UL/fundation/ime/: CMakeLists.txt
RW_UL/fundation/oso/: CMakeLists.txt
RW_UL/fundation/rqw/: CMakeLists.txt
RW_UL/fundation/utilty/: CMakeLists.txt
RW_UL/halcon/: CMakeLists.txt
RW_UL/halcon/test/: CMakeLists.txt
RW_UL/hoe/: CMakeLists.txt
RW_UL/hoe/hoec/: CMakeLists.txt
RW_UL/hoe/hoecRefactor/: CMakeLists.txt
RW_UL/hoe/hoei/: CMakeLists.txt
RW_UL/hoe/hoem/: CMakeLists.txt  README.md
RW_UL/hoe/hoes/: CMakeLists.txt
RW_UL/hoe/utilty/: CMakeLists.txt
RW_UL/ime/: CMakeLists.txt
RW_UL/ime/ime/: CMakeLists.txt
RW_UL/ime/imeo/: CMakeLists.txt
RW_UL/ime/imet/: CMakeLists.txt
RW_UL/ime/utilty/: CMakeLists.txt
RW_UL/oso/: CMakeLists.txt
RW_UL/oso/SerializedCodeGenerator/: CMakeLists.txt
RW_UL/oso/include/: oso_StorageContext.hpp  osop_OcrDateProductConfig.h
RW_UL/oso/src/: oso_core.cpp  osoc_MVSCameraConfig.cpp
RW_UL/rqw/: CMakeLists.txt
RW_UL/rqw/expandComponet/: CMakeLists.txt
RW_UL/rqw/include/: DlgWarn.h  NumberKeyboard.h  PicturesViewer.h  WarnUtilty.hpp  WarningInfoList.h  rqw_ImagePainter.h  rqw_ImageSaveEngine.h  rqw_LabelWarning.h
RW_UL/rqw/main/: CMakeLists.txt
RW_UL/rqw/src/: DlgWarn.cpp  NumberKeyboard.cpp  PicturesViewer.cpp  WarnUtilty.cpp  WarningInfoList.cpp  rqw_ImagePainter.cpp  rqw_ImageSaveEngine.cpp  rqw_LabelWarning.cpp
RW_UL/rqw/test/: CMakeLists.txt
RW_UL/rqw/ui/: WarningInfoList.ui
RW_UL/rqwm/include/: rqw_CameraObjectThread.hpp  rqw_CameraObjectZMotion.hpp
RW_UL/scc/: CMakeLists.txt
RW_UL/scc/include/: scc_motion.h
RW_UL/scc/src/: scc_motion.cpp
RW_UL/utilty/include/: utilty_ThreadPool.hpp
RW_UL/utilty/src/: utilty_ObjectPool.cpp  utilty_ThreadPool.cpp
ime/: CMakeLists.txt
ime/imeo/: CMakeLists.txt
ime/imeo/include/: imeo_ModelEngine_yolov11_obb.hpp
ime/imeo/src/: imeo_ModelEngine_yolov11_obb.cpp
ime/imeo/test/: CMakeLists.txt
ime/imet/: CMakeLists.txt
ime/imet/include/: imet_ModelEngine.h  imet_ModelEngine_yolov11_obb.hpp  imet_ModelEngine_yolov11_obb_refactor.hpp  imet_ModelEngine_yolov11_seg.hpp
ime/imet/src/: imet_ModelEngine.cpp  imet_ModelEngine_yolov11_obb.cpp  imet_ModelEngine_yolov11_obb_refactor.cpp  imet_ModelEngine_yolov11_seg.cpp
ime/imet/test/: CMakeLists.txt  main.cpp
ime/test/: CMakeLists.txt  main.cpp
ime/utilty/include/: ime_ModelEngine.h  ime_utilty.hpp
ime/utilty/src/: ime_ModelEngine.cpp  ime_utilty.cpp
tools/LicenseIssuance/: CMakeLists.txt
tools/LicenseIssuance/src/: main.cpp
tools/PackageTool/: CMakeLists.txt  PackageTool.cpp  PackageTool.h  PackageTool.qrc  PackageTool.ui  main.cpp
tools/demoNoQt/: CMakeLists.txt
tools/demoNoQt/src/: main.cpp  main.cu
(+824 files in other folders)
